--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.3.3
 gunicorn==21.2.0
 rembg==2.0.67
-Pillow==10.3.0
+Pillow==9.5.0
 numpy==1.26.4
 face_recognition==1.3.0
 dlib==19.24.2
+opencv-python-headless==4.8.0.74
