--- a/render.yaml
+++ b/render.yaml
@@ -1,28 +1,33 @@
 # render.yaml
-# This file tells Render how to build and run your service.
-# Add this file to the root of your repository.
-
 services:
   - type: web
     name: photofit-pro
-    # Use 'python' for Python services, 'docker' for Docker-based services
     env: python
-    # Specify the Python version. This is a more robust way than runtime.txt
-    pythonVersion: '3.10.13'
-    # Commands to run before the main build command.
-    # This is where we install the system dependencies for dlib and OpenCV.
+    pythonVersion: 3.10.13
+
+    # Install system dependencies required to build dlib and OpenCV
     preBuildCommand: |
       apt-get update && apt-get install -y --no-install-recommends \
       build-essential \
       cmake \
+      g++ \
       libopenblas-dev \
       liblapack-dev \
-      libjpeg-dev
-    # The command to install your Python dependencies.
-    buildCommand: "pip install -r requirements.txt"
-    # The command to start your web server.
-    startCommand: "gunicorn --bind 0.0.0.0:$PORT app:app"
-    # Optional: Set environment variables here if needed
+      libx11-dev \
+      libgtk-3-dev \
+      libboost-python-dev \
+      libboost-thread-dev \
+      libboost-system-dev \
+      libjpeg-dev \
+      libtiff-dev \
+      libpng-dev \
+      pkg-config \
+      python3-dev
+
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+
+    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
+
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.13
