--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,8 @@
-# render.yaml
-# This file tells Render how to build and run your service.
-# Add this file to the root of your repository.
-
 services:
   - type: web
     name: photofit-pro
     env: python
     pythonVersion: '3.10.13'
-    # Commands to run before the main build command.
-    # This is where we install the system dependencies for dlib and OpenCV.
     preBuildCommand: |
       apt-get update && apt-get install -y --no-install-recommends \
       build-essential \
@@ -16,15 +10,10 @@ services:
       libopenblas-dev \
       liblapack-dev \
       libjpeg-dev \
-      libgtk-3-dev \
-      libboost-all-dev \
-      python3-dev  # Include Python development headers for dlib
-
-    # The command to install your Python dependencies.
-    buildCommand: "pip install -r requirements.txt"
-    # The command to start your web server.
-    startCommand: "gunicorn --bind 0.0.0.0:$PORT app:app"
-    # Optional: Set environment variables here if needed
+      python3-dev \
+      libboost-all-dev
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.13
