--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ Pillow==9.5.0
 numpy==1.26.4
 face_recognition==1.3.0
 dlib==19.24.2
-opencv-python-headless==4.8.0.74
+cmake
+opencv-python-headless==4.8.1.78
